--- a/css/base.css
+++ b/css/base.css
@@ -21,6 +21,22 @@ img {
     height: auto;
 }
 
+img.desaturate {
+    transition: all 300ms ease;
+    -webkit-filter: grayscale(90%);
+    -moz-filter:    grayscale(90%);
+    -ms-filter:     grayscale(90%);
+    -o-filter:      grayscale(90%);
+    filter: grayscale(90%);
+}
+img.desaturate:hover {
+    -webkit-filter: grayscale(0%);
+    -moz-filter:    grayscale(0%);
+    -ms-filter:     grayscale(0%);
+    -o-filter:      grayscale(0%);
+    filter: none;
+}
+
 pre {
     overflow-x: auto;
 }
